--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-// File: package.json
 {
   "name": "chatbot-website",
   "version": "0.1.0",
@@ -21,6 +20,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "postcss": "^8",
     "typescript": "^5"
   }
 }
